--- a/DolaPlayer/dolaplayer.ui
+++ b/DolaPlayer/dolaplayer.ui
@@ -35,7 +35,14 @@
      </widget>
     </item>
     <item>
-     <widget class="QWidget" name="RenderWidget" native="true"/>
+     <widget class="QWidget" name="RenderWidget" native="true">
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(0, 0, 0);</string>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QWidget" name="BottomBar" native="true">
